--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -7,3 +7,10 @@
   padding: 0;
   box-sizing: border-box;
 }
+
+.containerFooter {
+  background-image: url('/marteloFooter.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+}
