--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -8,13 +8,6 @@
   box-sizing: border-box;
 }
 
-.containerFooter {
-  background-image: url('/marteloFooter.jpg');
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
-}
-
 body {
   max-width: 100vw;
   overflow-x: hidden;
@@ -22,4 +15,18 @@ body {
 
 input {
   outline: none;
+}
+
+.containerHome {
+  background-image: url('/logo.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+}
+
+.containerFooter {
+  background-image: url('/marteloFooter.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
 }
