styles: mudando as cores do site para a cor que o cliente esteja satisfeito

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,6 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
+:root {
+  --primary-color: #ff9999;
+  --secondary-color: #ffcccc;
+  --tertiary-color: #993366;
+}
+
 * {
   margin: 0;
   padding: 0;
